--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "node API connecting to a MySQL database",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "node": "^17.0.1"
+    "mysql2": "^2.3.3",
+    "node": "^17.0.1",
+    "nodemon": "^2.0.15",
+    "ssh2": "^1.8.0"
   }
 }
